// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderProductItem /> Renders OrderProductItem as expected 1`] = `
<div
  className="item-list"
>
  <div>
    <button
      className="red"
      onClick={[Function]}
    >
      Delete
    </button>
  </div>
  <hr
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
        "height": 3,
      }
    }
  />
</div>
`;

exports[`<OrderProductItem /> With Context 1`] = `
<div
  className="item-list"
>
  <div>
    <button
      className="red"
      onClick={[Function]}
    >
      Delete
    </button>
  </div>
  <ColoredLine
    color="gray"
  />
</div>
`;
